Fix about majors alignment

--- a/style.css
+++ b/style.css
@@ -212,7 +212,8 @@ p {
 
 .about__majors {
   display: flex;
-  justify-content: space-between;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
   margin: 80px 0;
 }
 
@@ -222,8 +223,9 @@ p {
 
 .major {
   border: 2px solid var(--color-light-blue);
-  width: 15rem;
+  min-width: 15rem;
   padding: 10px 10px;
+  margin: 20px 10px;
   border-radius: 10px;
 }
 
@@ -548,12 +550,15 @@ p {
 
   .about__majors {
     flex-direction: column;
+    align-items: center;
     margin-top: 30px;
     margin-bottom: 0px;
   }
 
   .major {
     margin-bottom: 30px;
+    flex-grow: 1;
+    width: 350px;
   }
 
   .skillset {
